use crate::groundlink::proto;
use proto::skycanvas::groundlink::groundlink_service_server;
use proto::skycanvas::groundlink::ArdulinkConnectionRequest;
use proto::skycanvas::groundlink::ArdulinkConnectionResponse;
use tokio::sync::mpsc::Receiver;
use tonic::Request;

use tonic::codegen::tokio_stream::wrappers::ReceiverStream;

pub struct SvcArdulinkConnect {
 
}

#[tonic::async_trait]
impl groundlink_service_server::GroundlinkService for SvcArdulinkConnect {
    type ArdulinkConnectStream = ReceiverStream<Result<ArdulinkConnectionResponse, tonic::Status>>;

    async fn ardulink_connect(
        &self,
        request: Request<ArdulinkConnectionRequest>,
    ) -> Result<tonic::Response<Self::ArdulinkConnectStream>, tonic::Status> {
        // Implementation placeholder
        let (tx, rx) = tokio::sync::mpsc::channel(10);
        // Add actual implementation here
        
        Ok(tonic::Response::new(ReceiverStream::new(rx)))
    }
}